<resources>
    <string name="app_name">Lab2</string>
    <string name="hello_message">Hello world!</string>
    <string name="buttontext">I\'m a Button</string>
    <string name="login">Login</string>
    <string name="Login_name">Login name</string>
    <string name="pass">Password</string>
    <string name="checkB">CheckBox</string>
    <string name="what">What does this do?</string>
    <string name="radio">RadioButton</string>
    <string name="cam">camera picture</string>
    <string name="flag">language flag</string>
    <string name="dialog_message">Do you want to exit?</string>
    <string name="dialog_title">make a choice</string>
    <string name="cancel">No, I want to stay</string>
    <string name="ok">Exit</string>
    <string name="startChat">Start Chat</string>
    <string name="insertData">Enter data</string>
    <string name="send">Send</string>
    <string name="pacMan">pacMan</string>
    <string name="pic">neon</string>
    <string name="weather">Weather Update</string>
    <string name="currentweather">Current Weather</string>
    <string name="deleteThisMessage">DELETE THIS MESSAGE</string>


</resources>
